css/custom.css
.navbar {
	margin-bottom: 0;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 25;
}

body {
	background: #3E4649;
	color: #f7f7f7;
	font-family: 'Montserrat', sans-serif;
  padding-top: 50px; /*Fix content overlap*/
}

/*Fix padding for mobile*/
@media (max-width: 979px) {
  body {
    padding-top: 0px;
  }
}

h1, h2 {
	font-weight: bold;
}

p {
	font-size: 16px;
	color: #cdcdcd;
}

#myCarousel {
  margin-bottom: 50px;
}
/*.jumbotron {
	background: #27A967;
	color: white;
	text-align: center;
  margin-bottom: 1000px;
}

.jumbotron p {
	color: white;
	font-size: 26px;
}*/

.btn-primary {
	color: #fff;
	background-color: transparent;
	border-color: white;
	margin-bottom: 5px;
}

.btn-primary:hover {
	color: #27A967;
	background-color: white;
	border-color: white;
}

.navbar-inverse {
	background: #2E2F31;
	border: 0;
}
.navbar-inverse .navbar-nav li a {
	color: #f7f7f7;
	font-size: 16px;
}
.navbar-inverse .navbar-nav li a:hover {
	background: #27A967;
}

/*Navigation Bar dropdown menu*/
.dropdown-menu {
	background: #2E2F31;
	border-radius: 0;
	border: 0;
}
.dropdown-menu li a {
	padding: 10px;
}
.navbar-inverse .navbar-nav .dropdown-menu li a:hover {
	background: #2C463C;
}

/*Styling for mobile*/
.myGrid {
	text-align: center;
}
.myGrid p {
	margin-bottom: 30px;
	font-family: sans-serif;
}
.glyphicon-large {
	font-size: 100px;
}

